[#6782] fix Extra whitespace in primary section header and dashboard tabs heading

--- a/ckan/public/base/css/main.css
+++ b/ckan/public/base/css/main.css
@@ -664,8 +664,6 @@ progress {
   flex-shrink: 0;
   width: 100%;
   max-width: 100%;
-  padding-right: calc(var(--bs-gutter-x) * 0.5);
-  padding-left: calc(var(--bs-gutter-x) * 0.5);
   margin-top: var(--bs-gutter-y);
 }
 
@@ -11217,7 +11215,7 @@ a.tag:hover {
 }
 
 .module > .page-header {
-  margin-top: 0.75rem;
+  margin-top: 0px;
 }
 .module > .module-content:nth-child(2n) {
   padding-top: 1.5rem;
